# development_crew

./: README.md  pyproject.toml
src/development_crew/: main.py
src/development_crew/crews/design_crew/: design_crew.py
src/development_crew/crews/design_crew/config/: agents.yaml  tasks.yaml
src/development_crew/crews/development_crew/: development_crew.py
src/development_crew/crews/development_crew/config/: agents.yaml  tasks.yaml
src/development_crew/crews/qa_crew/: qa_crew.py
src/development_crew/crews/qa_crew/config/: agents.yaml  tasks.yaml
src/development_crew/crews/requirements_crew/: requirements_crew.py
src/development_crew/crews/requirements_crew/config/: agents.yaml  tasks.yaml
src/development_crew/tools/: jira_tool.py
