[project]
name = "development_crew"
version = "0.1.0"
description = "DevelopmentTeam using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.1",
    "requests>=2.31.0",
]

[project.scripts]
kickoff = "development_crew.main:kickoff"
run_crew = "development_crew.main:kickoff"
plot = "development_crew.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
